--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,41 @@
+.box.is-list {
+  margin-bottom: 20px !important;
+  overflow: hidden !important; }
+  .box.is-list .entry-thumbnail {
+    height: 100%;
+    width: 100%; }
+    .box.is-list .entry-thumbnail img {
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      object-fit: cover;
+      object-position: center; }
+  .box.is-list .entry-header,
+  .box.is-list .entry-summary {
+    padding: 5px 15px; }
+  .box.is-list .entry-footer {
+    padding: 5px 15px 10px 15px; }
+  .box.is-list .entry-readmore {
+    background-image: linear-gradient(180deg, transparent, white); }
+  .box.is-list .is-readmore-button {
+    position: absolute;
+    z-index: 10;
+    bottom: 0px;
+    display: block;
+    margin: 10px 15px;
+    left: 0px;
+    right: 0px; }
+
+.is-single .entry-thumbnail {
+  overflow: hidden; }
+  .is-single .entry-thumbnail .post-thumbnail {
+    overflow: hidden; }
+    .is-single .entry-thumbnail .post-thumbnail img {
+      border-radius: 10px; }
+
+.is-single .entry-header {
+  margin-bottom: 20px; }
+
 /*! bulma.io v0.9.0 | MIT License | github.com/jgthms/bulma */
 @keyframes spinAround {
   from {
