Add bulma pagination

--- a/resources/styles/content/_single.sass
+++ b/resources/styles/content/_single.sass
@@ -5,5 +5,8 @@
       overflow: hidden
       img
         border-radius: 10px
+        width: 100% !important
+        height: auto !important
+        overflow: hidden
   .entry-header
     margin-bottom: 20px
