--- a/resources/styles/style.scss
+++ b/resources/styles/style.scss
@@ -1,3 +1,5 @@
+@charset "utf-8";
+$primary: #141414;
 @import "content/list";
 @import "content/single";
 @import "../../node_modules/bulma/bulma";
