Remove uncessary files

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+/* this is some requires css style. */
+.wp-caption {
+  padding: 7px 14px; }
+
 .box.is-list {
   margin-bottom: 20px !important;
   overflow: hidden !important; }
@@ -7525,10 +7529,6 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
   padding-bottom: 5px;
   margin-bottom: 10px; }
 
-/* this is some requires css style. */
-.wp-caption {
-  padding: 7px 14px; }
-
 #comments #reply-title {
   margin-top: 15px;
   margin-bottom: 5px; }
@@ -7536,3 +7536,6 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
 #comments .comment-body .avatar {
   border-radius: 100px;
   overflow: hidden; }
+
+.navbar-burger span {
+  height: 2px !important; }
