--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*!
 Theme Name: Nailfist
-Theme URI: http://underscores.me/
+Theme URI: http://github.com/nurofsun/nailfist-wordpress-theme
 Author: Nurahmat
-Author URI: http://underscores.me/
+Author URI: http://github.com/nurofsun
 Description: Custom theme: Nailfist, developed by Nurahmat
 Version: 1.0.0
 Tested up to: 5.4
@@ -17,9 +17,6 @@ Use it to make something cool, have fun, and share what you've learned.
 
 Nailfist is based on Underscores https://underscores.me/, (C) 2012-2020 Automattic, Inc.
 Underscores is distributed under the terms of the GNU GPL v2 or later.
-
-Normalizing styles have been helped along thanks to the fine work of
-Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 */
 
 
